# git-rig

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  deny.toml  dist-workspace.toml  justfile
.beads/: .beads-credential-key  .gitignore  metadata.json
.github/workflows/: ci.yml  release.yml
docs/brainstorms/: 2026-03-24-custom-upstream-branch-requirements.md  2026-03-26-clone-rig-requirements.md
docs/ideation/: 2026-03-24-ce-bootstrap-ideation.md
docs/plans/: 2026-03-24-001-feat-custom-upstream-branch-per-repo-plan.md  2026-03-26-001-feat-create-from-clone-rig-plan.md
docs/solutions/: git-rs-review-findings.md  partial-failure-must-return-error.md  upstream-config-with-fallback.md  worktree-prune-ordering-bug.md  worktree-recovery-ladder.md
hooks/: pre-commit
scripts/: release.sh
src/: commands.rs  error.rs  git.rs  main.rs  workspace.rs
tests/: cli_test.rs  git_test.rs
tests/common/: mod.rs
